tosu_overlays/showcase/style.css
:root {
    max-width: 1920px;
    max-height: 1080px;
    font-weight: 400;
}
#main {
    position: absolute;
    width: 1920px;
    height: 1080px;
    background-image: url("assets/bg_showcase.png");
    background-size: contain;
    font-family: Fraunces;
    color:white;
    overflow: hidden;
    font-optical-sizing: auto;


}

.invert {
    background-color: #ffffffff;
    color: black;
    -webkit-text-fill-color: black;
    padding-left: 1%;
    padding-right: 1%;
    text-shadow: none;
    mix-blend-mode: screen;    
}


.outline {
    color: transparent;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 1px #fff;
}

#topt {
    display:flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 1920px;
    height: 142px;
    font-size: 64px;
    color: white;
    text-shadow: 0 12px 60px #000, 0 2px 40px #222;
    
}

#container {
    max-width: 1920px;
    padding-left: 37px;
    display: flex;
}
#container > * {
    margin-right: 37px;
}

#gameplay {
    position: relative;
    min-width: 1440px;
    height: 900px;
    margin-top: 142px;
    border-radius: 12px;
}

#stuff {
    width: 100%;
    overflow-x: hidden;
    margin-top: 130px;
    display: flex;
    flex-direction: column;

}

#stuff > * {
    margin-bottom: 10px;
}

#ro {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 48px;
    text-shadow: 0 12px 60px #000, 0 2px 40px #222;
}

#panel {
    display: flex;
    flex-direction: column;
    background-color: #55555555;
    width: 100%;
    border-radius: 15px;
    border: 1px solid #88888844;
    backdrop-filter: blur(6px);
    height: 650px;
    padding-bottom: 25px;

}
#title {
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 5px;
    min-width: 0;
    max-height: 48px;
    font-size: 32px;
    overflow-x: visible;
    white-space: nowrap;
    display: block;
    transform: translateX(0);
}

#title.overflow-animate {
    animation: slide 10s linear infinite;
}

@keyframes slide {
    0% { transform: translateX(0); }
    30% { transform: translateX(0); }
    80% { opacity: 1;}
    90% { transform: translateX(-100%);}
    
    95% {
        opacity: 0;
        transform: translateX(-100%);
    }
    96% { transform: translateX(0); opacity: 0;}
    100% { transform: translateX(0); opacity: 1; }
}

#artist {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    min-width: 0;
    max-width: calc(100% - 10px);
    height: 24px;
    font-size: 16px;
    overflow-x: hidden;
    text-wrap: nowrap;
    overflow-y: hidden;
    text-overflow: ellipsis;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #ffffffcc;
}


#difficulty {
    padding-left: 10px;
    padding-right: 10px;
    min-width: 0;
    max-width: calc(100% - 10px);
    max-height: 32px;
    font-size: 16px;
    overflow-x: hidden;
    overflow-y: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    opacity: 0.5;
    font-style: italic;
}

#mapper {
    padding: 10px;
    min-width: 100%;
    max-height: 32px;
    font-size: 24px;
    overflow-y: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    opacity: 0.7;
}
#replayer-container {
    padding-left: 10px;
    padding-right: 10px;
    min-width: 100%;
    max-height: 32px;
    font-size: 24px;
    overflow-y: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: 400;
    opacity: 1;
}

.replayer {
    font-weight: 800;
}



#bgcontainer {
    height: 200px;
    width: 100%;
    overflow: hidden;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    position: relative;
    flex-shrink: 0;
}

#bg {
    position:relative;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    object-fit: cover;
    display: block;
}

#divider {
    width: 80%;
    height: 1px;
    background-color: #88888844;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: auto;
    margin-right: auto;
}


#srcontainer {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-self: center;
    font-size: 32px;
    padding-bottom: 25px;
}

.icon2 {
    width: 32px;
    height: 100%;
    margin-right: 5px;
    vertical-align: middle;
    position: relative;
    top: -3px;
}


#stats {
    align-self: center;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 15px;
    column-gap: 50px;
    font-size: 24px;
    justify-items: center; 
    align-items: center;
    justify-content: center; 
    align-content: center;
    width: calc(100% - 20px);
}

#stats > div {
    justify-self: center;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#stats > div > span {
    padding-left: 5px;
    padding-right: 5px;
}

.value {
    font-weight: 700;
}

.icon {
    width: 30px;
    height: 100%;
    vertical-align: middle;
}

#pick {
    position: absolute;
    bottom: 0px;
    right: 0px;
    width: 100%;
    height: 100%;
    padding-bottom: 10px;
    padding-right: 15px;
    text-shadow: 0 12px 60px #000, 0 2px 40px #222;
    z-index: 10;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    background: linear-gradient(135deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,1) 100%);
    background-size: cover;
    color: white;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;    
    font-size: 48px;
    font-weight: 500;
}


#custom {
    width: 100%;
    background-color: white;
    color: black;
    -webkit-text-fill-color: black;
    mix-blend-mode: screen;
    font-size: 25px;
    padding-left: 10px;
    transition: all 0.3s ease-out;
    height: 0px;
    overflow: hidden;
    display: flex;
    align-items: center;
}

#custom > img {
    width: 30px;
    height: 100%;
    margin-right: 5px;
    vertical-align: middle;
}

#custom.transition {
    height: 40px;
}



#casters {
    display: flex;
    flex-direction: column;
    background-color: #55555555;
    width: 100%;
    border-radius: 15px;
    border: 1px solid #88888844;
    backdrop-filter: blur(6px);
    height: 152px;
}

#casters > span {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    height: 24px;
    font-size: 16px;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #ffffffcc;
};

